Thu Apr 17 16:53:23 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * bin/dcps_tests.lst:

          Added back in Priority tests.

        * tests/DCPS/Priority/DataReaderListener.cpp:

          Increased sleeping to definitely cause back pressure on all builds.

        * tests/DCPS/Priority/publisher_main.cpp:

          Temporarily removed check for scheduler.

        * tests/DCPS/Priority/Publisher.cpp:

          Increased the number of instance samples to prevent low priority samples
          being removed from the queue before high priority sample can be passed
          to write.

Thu Apr 17 15:12:57 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * bin/dcps_tests.lst:

          Temporarily turned off Priority tests.

Thu Apr 17 13:00:38 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * dds/DCPS/DataSampleList.cpp:

          Fixed error in setting tail_ for removing a next instance sample
          from the tail of the list.

Tue Apr 15 21:41:19 UTC 2014  Jeff Schmitz  <schmitzj@ociweb.com>

        * dds/InfoRepo/DCPSInfo_i.cpp:

          Additional logging prior to calling find_subscription_reference()
          and find_publication_reference().

        * tests/DCPS/PersistentDurability/run_test.pl:

          Raise log level.

Tue Apr 15 20:57:02 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * tests/DCPS/Priority/DataReaderListener.cpp:

          Added more diagnostics.

        * tests/DCPS/ReaderDataLifecycle/main.cpp:

          Added class to handle cleanup when exiting and added
          diagnostics messages.

        * tests/DCPS/ReaderDataLifecycle/run_test.pl:

          Added timestamps to track when data is disposed.

Tue Apr 15 15:40:10 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * dds/DCPS/WriteDataContainer.cpp:

          Fixed race condition where the element has been marked with
          space available after the condition has timedout, but before