@@ -35,16 +35,6 @@ int ACE_TMAIN(int argc, ACE_TCHAR* argv[])
     // Execute the test.
     publisher.run();
 
-    // this can only fail if ACE_HAS_PTHREADS is defined
-/*    if (TheServiceParticipant->scheduler() == -1) {
-      ACE_ERROR((LM_ERROR,
-        ACE_TEXT("(%P|%t) ERROR: publisher_main() - ")
-        ACE_TEXT("scheduler should be set by transport ini ")
-        ACE_TEXT("file.\n")
-      ));
-      return 1;
-    }
-*/
   } catch( CORBA::Exception& /* e */) {
     ACE_ERROR((LM_ERROR,
       ACE_TEXT("(%P|%t) publisher_main() - ")
